nexus-rt/tests/ui/guard_wrong_ref.stderr
error[E0277]: this function cannot be used as a reference step for this input type
  --> tests/ui/guard_wrong_ref.rs:24:16
   |
24 |         .guard(check_value, &reg);
   |          ----- ^^^^^^^^^^^ the trait `IntoRefStep<Option<u32>, bool, _>` is not implemented for fn item `fn(u32) -> bool {check_value}`
   |          |
   |          required by a bound introduced by this call
   |
   = note: reference steps (guard, filter, tap, inspect) take `&In`, not `In`
   = note: if the pipeline output is `Option<T>`, `.filter()` operates on `&T` inside the Option
   = note: closures with resource parameters are not supported — use a named `fn`
   = help: the following other types implement trait `IntoRefStep<In, Out, Params>`:
             `NoEvent<F>` implements `IntoRefStep<(), Out, (P0, P1)>`
             `NoEvent<F>` implements `IntoRefStep<(), Out, (P0, P1, P2)>`
             `NoEvent<F>` implements `IntoRefStep<(), Out, (P0, P1, P2, P3)>`
             `NoEvent<F>` implements `IntoRefStep<(), Out, (P0, P1, P2, P3, P4)>`
             `NoEvent<F>` implements `IntoRefStep<(), Out, (P0, P1, P2, P3, P4, P5)>`
             `NoEvent<F>` implements `IntoRefStep<(), Out, (P0, P1, P2, P3, P4, P5, P6)>`
             `NoEvent<F>` implements `IntoRefStep<(), Out, (P0, P1, P2, P3, P4, P5, P6, P7)>`
             `NoEvent<F>` implements `IntoRefStep<(), Out, (P0,)>`
note: required by a bound in `PipelineChain::<In, Out, Chain>::guard`
  --> src/pipeline.rs
   |
   |     pub fn guard<Params, S: IntoRefStep<Out, bool, Params>>(
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PipelineChain::<In, Out, Chain>::guard`
